--- a/manage-leagues.html
+++ b/manage-leagues.html
@@ -1158,7 +1158,7 @@
                 return;
             }
             
-            const joinLink = `${window.location.origin}/Fantasy_Hockey/manage-leagues.html?action=join&league=${leagueId}&code=${leagueCode}`;
+            const joinLink = `${window.location.origin}/Fantasy_Hockey/manage-leagues.html`;
             
             // Send an email to each invited manager
             invitedManagers.forEach(manager => {
