--- a/manage-leagues.html
+++ b/manage-leagues.html
@@ -214,7 +214,7 @@
             margin-bottom: 20px;
         }
         .tab button {
-            background-color: inherit;
+            background-color: #f1f1f1;
             float: left;
             border: none;
             outline: none;
@@ -222,13 +222,16 @@
             padding: 10px 16px;
             transition: 0.3s;
             font-size: 16px;
+            color: var(--primary-color);
+            font-weight: 500;
         }
         .tab button:hover {
             background-color: #ddd;
         }
         .tab button.active {
-            background-color: #003366;
+            background-color: var(--primary-color);
             color: white;
+            font-weight: 600;
         }
         .tabcontent {
             display: none;
