--- a/draftcentre.html
+++ b/draftcentre.html
@@ -2803,6 +2803,9 @@
 
         // --- Drafting Logic ---
         function draftPlayer(playerId, playerName, position, nhlTeam) {
+            console.log("DRAFT DEBUG - Current playoff round:", currentRound);
+            console.log("DRAFT DEBUG - Firebase playoff round:", leagueData?.playoffRound?.currentRound);
+            console.log("DRAFT DEBUG - Draft round:", leagueData?.draftStatus?.round);
             console.log(`Attempting draft for ${playerName}`);
             const draftIsActive = leagueData?.draftStatus?.active ?? false;
             if (!draftIsActive) {
