fixed fetch stats so that it won't include regular season stats for players without games played. Fixed formatting error in league.html so that it matches the data files (removed space on date format).

--- a/league.html
+++ b/league.html
@@ -957,7 +957,7 @@
             try {
                 // Try to load the most recent stats file first
                 const now = new Date();
-                const currentDate = now.toLocaleString('en-us', { month: 'short', day: '2-digit' });
+                const currentDate = now.toLocaleString('en-us', { month: 'short', day: '2-digit' }).replace(' ', '');
                 const latestStatsFile = `data/updatedstats-${currentDate}.json`;
                 
                 let response = await fetch(latestStatsFile);
