--- a/league.html
+++ b/league.html
@@ -957,7 +957,7 @@
             try {
                 // Try to load the most recent stats file first
                 const now = new Date();
-                const currentDate = now.toLocaleString('en-us', { month: 'short', day: '2-digit' }).replace(' ', '');
+                const currentDate = now.toISOString().split('T')[0].replace(/-/g, ''); // Format: YYYYMMDD
                 
                 // Use raw GitHub URL instead of relative path, but keep the dynamic date
                 const rawGitHubBaseUrl = 'https://raw.githubusercontent.com/randyj18/Fantasy_Hockey/master/data/';
@@ -972,7 +972,7 @@
                     // Calculate yesterday's date
                     const yesterday = new Date();
                     yesterday.setDate(yesterday.getDate() - 1);
-                    const yesterdayDate = yesterday.toLocaleString('en-us', { month: 'short', day: '2-digit' }).replace(' ', '');
+                    const yesterdayDate = yesterday.toISOString().split('T')[0].replace(/-/g, ''); // Format: YYYYMMDD
                     
                     // Try yesterday's file
                     const yesterdayStatsFile = `${rawGitHubBaseUrl}updatedstats-${yesterdayDate}.json`;
