fixed draftcentre and manage-leagues scripts

--- a/draftcentre.html
+++ b/draftcentre.html
@@ -294,9 +294,7 @@
 
     <script src="firebaseConfig.js"></script>
     <!-- Firebase SDK -->
-    <script type="module" src="draftcentre.js">
-        // JavaScript content has been moved to draftcentre.js
-    </script>
+    <script type="module" src="draftcentre.js"></script>
 </body>
 
 </html>
