--- a/manage-leagues.html
+++ b/manage-leagues.html
@@ -128,9 +128,7 @@
     <script src="firebaseConfig.js"></script>
     
     <!-- Firebase SDK -->
-    <script type="module" src="manage-leagues.js">
-        // JavaScript content has been moved to manage-leagues.js
-    </script>
+    <script type="module" src="manage-leagues.js"></script>
 
     <script src="gmailConfig.js"></script>
     <script src="https://apis.google.com/js/api.js"></script>
