--- a/draftcentre.html
+++ b/draftcentre.html
@@ -294,7 +294,7 @@
 
     <script src="firebaseConfig.js"></script>
     <!-- Firebase SDK -->
-    <script type="module" src="draftcentre.js"></script>
+    <script type="module" src="draftcentre-simple.js"></script>
 </body>
 
 </html>
